--- a/public/css/app.css
+++ b/public/css/app.css
@@ -751,6 +751,39 @@ select {
 [type='file']:focus {
 	outline: 1px auto -webkit-focus-ring-color;
 }
+.container {
+	width: 100%;
+}
+@media (min-width: 640px) {
+
+	.container {
+		max-width: 640px;
+	}
+}
+@media (min-width: 768px) {
+
+	.container {
+		max-width: 768px;
+	}
+}
+@media (min-width: 1024px) {
+
+	.container {
+		max-width: 1024px;
+	}
+}
+@media (min-width: 1280px) {
+
+	.container {
+		max-width: 1280px;
+	}
+}
+@media (min-width: 1536px) {
+
+	.container {
+		max-width: 1536px;
+	}
+}
 .prose {
 	color: #374151;
 	max-width: 65ch;
@@ -1110,6 +1143,18 @@ select {
 .bottom-0 {
 	bottom: 0px;
 }
+.top-10 {
+	top: 2.5rem;
+}
+.bottom-10 {
+	bottom: 2.5rem;
+}
+.bottom-6 {
+	bottom: 1.5rem;
+}
+.bottom-full {
+	bottom: 100%;
+}
 .z-0 {
 	z-index: 0;
 }
@@ -1125,11 +1170,17 @@ select {
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
-.col-span-2 {
-	grid-column: span 2 / span 2;
-}
 .col-span-10 {
 	grid-column: span 10 / span 10;
+}
+.col-span-4 {
+	grid-column: span 4 / span 4;
+}
+.col-span-3 {
+	grid-column: span 3 / span 3;
+}
+.col-span-9 {
+	grid-column: span 9 / span 9;
 }
 .col-start-2 {
 	grid-column-start: 2;
@@ -1137,6 +1188,10 @@ select {
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
+}
+.my-auto {
+	margin-top: auto;
+	margin-bottom: auto;
 }
 .my-4 {
 	margin-top: 1rem;
@@ -1218,6 +1273,12 @@ select {
 .-mt-px {
 	margin-top: -1px;
 }
+.ml-14 {
+	margin-left: 3.5rem;
+}
+.mt-12 {
+	margin-top: 3rem;
+}
 .ml-auto {
 	margin-left: auto;
 }
@@ -1232,6 +1293,27 @@ select {
 }
 .mb-2 {
 	margin-bottom: 0.5rem;
+}
+.-mt-44 {
+	margin-top: -11rem;
+}
+.-mt-32 {
+	margin-top: -8rem;
+}
+.-mt-24 {
+	margin-top: -6rem;
+}
+.-mt-16 {
+	margin-top: -4rem;
+}
+.mt-16 {
+	margin-top: 4rem;
+}
+.mt-20 {
+	margin-top: 5rem;
+}
+.mb-3 {
+	margin-bottom: 0.75rem;
 }
 .block {
 	display: block;
@@ -1290,8 +1372,26 @@ select {
 .h-24 {
 	height: 6rem;
 }
-.min-h-screen {
-	min-height: 100vh;
+.h-32 {
+	height: 8rem;
+}
+.h-40 {
+	height: 10rem;
+}
+.h-44 {
+	height: 11rem;
+}
+.h-60 {
+	height: 15rem;
+}
+.h-80 {
+	height: 20rem;
+}
+.h-96 {
+	height: 24rem;
+}
+.min-h-highHeader {
+	min-height: 500px;
 }
 .w-5 {
 	width: 1.25rem;
@@ -1454,6 +1554,9 @@ select {
 .list-disc {
 	list-style-type: disc;
 }
+.grid-flow-row {
+	grid-auto-flow: row;
+}
 .grid-cols-6 {
 	grid-template-columns: repeat(6, minmax(0, 1fr));
 }
@@ -1463,11 +1566,17 @@ select {
 .grid-cols-12 {
 	grid-template-columns: repeat(12, minmax(0, 1fr));
 }
+.grid-cols-3 {
+	grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .flex-col {
 	flex-direction: column;
 }
 .flex-wrap {
 	flex-wrap: wrap;
+}
+.place-items-center {
+	place-items: center;
 }
 .items-center {
 	align-items: center;
@@ -1492,6 +1601,9 @@ select {
 }
 .gap-8 {
 	gap: 2rem;
+}
+.gap-2 {
+	gap: 0.5rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -1576,9 +1688,26 @@ select {
 	border-bottom-right-radius: 0px;
 	border-bottom-left-radius: 0px;
 }
+.rounded-l-xl {
+	border-top-left-radius: 0.75rem;
+	border-bottom-left-radius: 0.75rem;
+}
 .rounded-r-xl {
 	border-top-right-radius: 0.75rem;
 	border-bottom-right-radius: 0.75rem;
+}
+.rounded-r-lg {
+	border-top-right-radius: 0.5rem;
+	border-bottom-right-radius: 0.5rem;
+}
+.rounded-tr-lg {
+	border-top-right-radius: 0.5rem;
+}
+.rounded-br-lg {
+	border-bottom-right-radius: 0.5rem;
+}
+.rounded-bl-lg {
+	border-bottom-left-radius: 0.5rem;
 }
 .border {
 	border-width: 1px;
@@ -1683,12 +1812,55 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
+.bg-black {
+	--tw-bg-opacity: 1;
+	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+.bg-blue-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
+}
+.bg-blue-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+}
 .bg-green-100 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 250, 229, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
+}
+.bg-opacity-30 {
+	--tw-bg-opacity: 0.3;
+}
+.bg-opacity-50 {
+	--tw-bg-opacity: 0.5;
+}
+.bg-imgHead {
+	background-image: url('/gambar/Rectangle 1.png');
+}
+.bg-gradient-to-t {
+	background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+.bg-gradient-to-b {
+	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+.from-black {
+	--tw-gradient-from: #000;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(0, 0, 0, 0));
+}
+.to-white {
+	--tw-gradient-to: #fff;
+}
+.to-transparent {
+	--tw-gradient-to: transparent;
+}
+.bg-cover {
+	background-size: cover;
+}
+.bg-bottom {
+	background-position: bottom;
 }
 .object-cover {
 	-o-object-fit: cover;
@@ -1765,6 +1937,14 @@ select {
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
 }
+.px-20 {
+	padding-left: 5rem;
+	padding-right: 5rem;
+}
+.px-8 {
+	padding-left: 2rem;
+	padding-right: 2rem;
+}
 .px-7 {
 	padding-left: 1.75rem;
 	padding-right: 1.75rem;
@@ -1776,6 +1956,14 @@ select {
 .py-px {
 	padding-top: 1px;
 	padding-bottom: 1px;
+}
+.px-32 {
+	padding-left: 8rem;
+	padding-right: 8rem;
+}
+.px-80 {
+	padding-left: 20rem;
+	padding-right: 20rem;
 }
 .pt-6 {
 	padding-top: 1.5rem;
@@ -1813,6 +2001,18 @@ select {
 .pl-10 {
 	padding-left: 2.5rem;
 }
+.pb-8 {
+	padding-bottom: 2rem;
+}
+.pb-6 {
+	padding-bottom: 1.5rem;
+}
+.pb-5 {
+	padding-bottom: 1.25rem;
+}
+.pt-10 {
+	padding-top: 2.5rem;
+}
 .text-center {
 	text-align: center;
 }
@@ -1848,6 +2048,14 @@ select {
 .text-xl {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
+}
+.text-5xl {
+	font-size: 3rem;
+	line-height: 1;
+}
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
 }
 .font-medium {
 	font-weight: 500;
@@ -1953,9 +2161,21 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
+.text-blue-500 {
+	--tw-text-opacity: 1;
+	color: rgba(59, 130, 246, var(--tw-text-opacity));
+}
 .text-blue-400 {
 	--tw-text-opacity: 1;
 	color: rgba(96, 165, 250, var(--tw-text-opacity));
+}
+.text-gray-100 {
+	--tw-text-opacity: 1;
+	color: rgba(243, 244, 246, var(--tw-text-opacity));
+}
+.text-blue-600 {
+	--tw-text-opacity: 1;
+	color: rgba(37, 99, 235, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -1975,6 +2195,9 @@ select {
 }
 .opacity-50 {
 	opacity: 0.5;
+}
+.bg-blend-darken {
+	background-blend-mode: darken;
 }
 .shadow-sm {
 	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
@@ -2015,6 +2238,10 @@ select {
 }
 .ring-opacity-5 {
 	--tw-ring-opacity: 0.05;
+}
+.contrast-125 {
+	--tw-contrast: contrast(1.25);
+	filter: var(--tw-filter);
 }
 .filter {
 	filter: var(--tw-filter);
@@ -2106,6 +2333,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
+.hover\:bg-purple-500:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(139, 92, 246, var(--tw-bg-opacity));
+}
 .hover\:bg-purple-600:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
@@ -2129,6 +2360,10 @@ select {
 .hover\:text-gray-900:hover {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+.hover\:text-blue-600:hover {
+	--tw-text-opacity: 1;
+	color: rgba(37, 99, 235, var(--tw-text-opacity));
 }
 .focus\:z-10:focus {
 	z-index: 10;
@@ -2539,6 +2774,10 @@ select {
 
 	.xl\:grid-cols-4 {
 		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+
+	.xl\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
 }
 
