--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1131,6 +1131,9 @@ select {
 .top-0 {
 	top: 0px;
 }
+.bottom-0 {
+	bottom: 0px;
+}
 .top-12 {
 	top: 3rem;
 }
@@ -1139,21 +1142,6 @@ select {
 }
 .left-1\/2 {
 	left: 50%;
-}
-.bottom-0 {
-	bottom: 0px;
-}
-.top-10 {
-	top: 2.5rem;
-}
-.bottom-10 {
-	bottom: 2.5rem;
-}
-.bottom-6 {
-	bottom: 1.5rem;
-}
-.bottom-full {
-	bottom: 100%;
 }
 .z-0 {
 	z-index: 0;
@@ -1170,17 +1158,20 @@ select {
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
-.col-span-10 {
-	grid-column: span 10 / span 10;
-}
-.col-span-4 {
-	grid-column: span 4 / span 4;
-}
 .col-span-3 {
 	grid-column: span 3 / span 3;
 }
 .col-span-9 {
 	grid-column: span 9 / span 9;
+}
+.col-span-4 {
+	grid-column: span 4 / span 4;
+}
+.col-span-10 {
+	grid-column: span 10 / span 10;
+}
+.col-span-12 {
+	grid-column: span 12 / span 12;
 }
 .col-start-2 {
 	grid-column-start: 2;
@@ -1279,6 +1270,15 @@ select {
 .mt-12 {
 	margin-top: 3rem;
 }
+.-mt-16 {
+	margin-top: -4rem;
+}
+.mt-20 {
+	margin-top: 5rem;
+}
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
 .ml-auto {
 	margin-left: auto;
 }
@@ -1294,32 +1294,20 @@ select {
 .mb-2 {
 	margin-bottom: 0.5rem;
 }
-.-mt-44 {
-	margin-top: -11rem;
+.mt-40 {
+	margin-top: 10rem;
 }
-.-mt-32 {
-	margin-top: -8rem;
-}
-.-mt-24 {
-	margin-top: -6rem;
-}
-.-mt-16 {
-	margin-top: -4rem;
-}
-.mt-16 {
-	margin-top: 4rem;
-}
-.mt-20 {
-	margin-top: 5rem;
-}
-.mb-3 {
-	margin-bottom: 0.75rem;
+.mt-56 {
+	margin-top: 14rem;
 }
 .block {
 	display: block;
 }
 .inline-block {
 	display: inline-block;
+}
+.inline {
+	display: inline;
 }
 .flex {
 	display: flex;
@@ -1360,35 +1348,26 @@ select {
 .h-20 {
 	height: 5rem;
 }
+.h-full {
+	height: 100%;
+}
+.h-44 {
+	height: 11rem;
+}
+.h-96 {
+	height: 24rem;
+}
+.h-32 {
+	height: 8rem;
+}
 .h-7 {
 	height: 1.75rem;
 }
 .h-screen {
 	height: 100vh;
 }
-.h-full {
-	height: 100%;
-}
 .h-24 {
 	height: 6rem;
-}
-.h-32 {
-	height: 8rem;
-}
-.h-40 {
-	height: 10rem;
-}
-.h-44 {
-	height: 11rem;
-}
-.h-60 {
-	height: 15rem;
-}
-.h-80 {
-	height: 20rem;
-}
-.h-96 {
-	height: 24rem;
 }
 .min-h-highHeader {
 	min-height: 500px;
@@ -1471,6 +1450,9 @@ select {
 .flex-shrink-0 {
 	flex-shrink: 0;
 }
+.flex-grow {
+	flex-grow: 1;
+}
 .origin-top-left {
 	transform-origin: top left;
 }
@@ -1524,6 +1506,10 @@ select {
 	--tw-rotate: 180deg;
 	transform: var(--tw-transform);
 }
+.rotate-0 {
+	--tw-rotate: 0deg;
+	transform: var(--tw-transform);
+}
 .scale-95 {
 	--tw-scale-x: .95;
 	--tw-scale-y: .95;
@@ -1566,8 +1552,8 @@ select {
 .grid-cols-12 {
 	grid-template-columns: repeat(12, minmax(0, 1fr));
 }
-.grid-cols-3 {
-	grid-template-columns: repeat(3, minmax(0, 1fr));
+.flex-row {
+	flex-direction: row;
 }
 .flex-col {
 	flex-direction: column;
@@ -1599,11 +1585,11 @@ select {
 .gap-1 {
 	gap: 0.25rem;
 }
-.gap-8 {
-	gap: 2rem;
-}
 .gap-2 {
 	gap: 0.5rem;
+}
+.gap-8 {
+	gap: 2rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -1696,15 +1682,8 @@ select {
 	border-top-right-radius: 0.75rem;
 	border-bottom-right-radius: 0.75rem;
 }
-.rounded-r-lg {
-	border-top-right-radius: 0.5rem;
-	border-bottom-right-radius: 0.5rem;
-}
 .rounded-tr-lg {
 	border-top-right-radius: 0.5rem;
-}
-.rounded-br-lg {
-	border-bottom-right-radius: 0.5rem;
 }
 .rounded-bl-lg {
 	border-bottom-left-radius: 0.5rem;
@@ -1824,9 +1803,28 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }
+.bg-gray-900 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+.bg-blue-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
+}
 .bg-green-100 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 250, 229, var(--tw-bg-opacity));
+}
+.bg-blue-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
+}
+.bg-blue-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
+}
+.bg-transparent {
+	background-color: transparent;
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1843,15 +1841,9 @@ select {
 .bg-gradient-to-t {
 	background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
-.bg-gradient-to-b {
-	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
 .from-black {
 	--tw-gradient-from: #000;
 	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(0, 0, 0, 0));
-}
-.to-white {
-	--tw-gradient-to: #fff;
 }
 .to-transparent {
 	--tw-gradient-to: transparent;
@@ -1872,11 +1864,11 @@ select {
 .p-6 {
 	padding: 1.5rem;
 }
-.p-1 {
-	padding: 0.25rem;
-}
 .p-4 {
 	padding: 1rem;
+}
+.p-1 {
+	padding: 0.25rem;
 }
 .p-px {
 	padding: 1px;
@@ -1957,14 +1949,6 @@ select {
 	padding-top: 1px;
 	padding-bottom: 1px;
 }
-.px-32 {
-	padding-left: 8rem;
-	padding-right: 8rem;
-}
-.px-80 {
-	padding-left: 20rem;
-	padding-right: 20rem;
-}
 .pt-6 {
 	padding-top: 1.5rem;
 }
@@ -1998,20 +1982,20 @@ select {
 .pt-8 {
 	padding-top: 2rem;
 }
-.pl-10 {
-	padding-left: 2.5rem;
-}
-.pb-8 {
-	padding-bottom: 2rem;
-}
-.pb-6 {
-	padding-bottom: 1.5rem;
+.pt-10 {
+	padding-top: 2.5rem;
 }
 .pb-5 {
 	padding-bottom: 1.25rem;
 }
-.pt-10 {
-	padding-top: 2.5rem;
+.pl-10 {
+	padding-left: 2.5rem;
+}
+.pb-10 {
+	padding-bottom: 2.5rem;
+}
+.text-left {
+	text-align: left;
 }
 .text-center {
 	text-align: center;
@@ -2165,17 +2149,13 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(59, 130, 246, var(--tw-text-opacity));
 }
-.text-blue-400 {
-	--tw-text-opacity: 1;
-	color: rgba(96, 165, 250, var(--tw-text-opacity));
-}
-.text-gray-100 {
-	--tw-text-opacity: 1;
-	color: rgba(243, 244, 246, var(--tw-text-opacity));
-}
 .text-blue-600 {
 	--tw-text-opacity: 1;
 	color: rgba(37, 99, 235, var(--tw-text-opacity));
+}
+.text-blue-400 {
+	--tw-text-opacity: 1;
+	color: rgba(96, 165, 250, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2285,6 +2265,9 @@ select {
 .duration-300 {
 	transition-duration: 300ms;
 }
+.duration-100 {
+	transition-duration: 100ms;
+}
 .ease-in-out {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -2340,6 +2323,10 @@ select {
 .hover\:bg-purple-600:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
+}
+.hover\:bg-gray-200:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
@@ -2412,6 +2399,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
+.focus\:bg-gray-200:focus {
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
 .focus\:text-gray-700:focus {
 	--tw-text-opacity: 1;
 	color: rgba(55, 65, 81, var(--tw-text-opacity));
@@ -2427,6 +2418,10 @@ select {
 .focus\:text-gray-500:focus {
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+.focus\:text-gray-900:focus {
+	--tw-text-opacity: 1;
+	color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
 .focus\:outline-none:focus {
 	outline: 2px solid transparent;
@@ -2707,12 +2702,65 @@ select {
 		grid-column: span 1 / span 1;
 	}
 
+	.md\:col-span-3 {
+		grid-column: span 3 / span 3;
+	}
+
+	.md\:col-span-12 {
+		grid-column: span 12 / span 12;
+	}
+
+	.md\:col-span-9 {
+		grid-column: span 9 / span 9;
+	}
+
+	.md\:col-span-4 {
+		grid-column: span 4 / span 4;
+	}
+
+	.md\:col-span-6 {
+		grid-column: span 6 / span 6;
+	}
+
+	.md\:mx-auto {
+		margin-left: auto;
+		margin-right: auto;
+	}
+
 	.md\:mt-0 {
 		margin-top: 0px;
 	}
 
+	.md\:mr-6 {
+		margin-right: 1.5rem;
+	}
+
+	.md\:ml-6 {
+		margin-left: 1.5rem;
+	}
+
+	.md\:mt-20 {
+		margin-top: 5rem;
+	}
+
+	.md\:ml-4 {
+		margin-left: 1rem;
+	}
+
+	.md\:-mt-1 {
+		margin-top: -0.25rem;
+	}
+
+	.md\:mt-12 {
+		margin-top: 3rem;
+	}
+
 	.md\:block {
 		display: block;
+	}
+
+	.md\:inline {
+		display: inline;
 	}
 
 	.md\:flex {
@@ -2727,6 +2775,14 @@ select {
 		display: none;
 	}
 
+	.md\:w-auto {
+		width: auto;
+	}
+
+	.md\:w-48 {
+		width: 12rem;
+	}
+
 	.md\:grid-cols-3 {
 		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
@@ -2735,12 +2791,28 @@ select {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
+	.md\:flex-row {
+		flex-direction: row;
+	}
+
 	.md\:items-center {
 		align-items: center;
 	}
 
+	.md\:justify-end {
+		justify-content: flex-end;
+	}
+
+	.md\:justify-between {
+		justify-content: space-between;
+	}
+
 	.md\:gap-6 {
 		gap: 1.5rem;
+	}
+
+	.md\:gap-8 {
+		gap: 2rem;
 	}
 
 	.md\:border-t-0 {
@@ -2753,6 +2825,35 @@ select {
 
 	.md\:p-8 {
 		padding: 2rem;
+	}
+
+	.md\:px-20 {
+		padding-left: 5rem;
+		padding-right: 5rem;
+	}
+
+	.md\:px-6 {
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+	}
+
+	.md\:px-8 {
+		padding-left: 2rem;
+		padding-right: 2rem;
+	}
+
+	.md\:pb-0 {
+		padding-bottom: 0px;
+	}
+
+	.md\:text-base {
+		font-size: 1rem;
+		line-height: 1.5rem;
+	}
+
+	.md\:text-3xl {
+		font-size: 1.875rem;
+		line-height: 2.25rem;
 	}
 }
 @media (min-width: 1024px) {
